mule-user-guide/v/3.5/starting-the-runtime-in-cluster-mode-in-studio.adoc
= Starting the Runtime in Cluster Mode in Studio
:keywords: mule, esb, deploy, launch, run, anypoint studio, cluster

A new feature in Anypoint Studio July 2014 allows you to specify that the Mule runtime should start in cluster mode for specific applications. Running an application with this setting enabled will cause it to run as if it were on a one-node cluster. This allows you to test for any discrepancies in the application's behavior between the clustered and the standalone modes.

You enable cluster mode via the *run* configurations for your application.

To access the run configurations for your application, select *Run*, then *Run Configurations.* In the left-hand pane, select your desired application or click the image:new.png[new] icon to create a new run configuration.

In the run configuration's *General* tab, click *Start as cluster node*. You can enter a cluster node ID or leave this field blank to let Studio assign a random ID.

image:run_config.png[run_config]

== See Also

* Learn more about link:/runtime-manager/cloudhub[CloudHub].
