mule-user-guide/v/3.8/starting-the-runtime-in-cluster-mode-in-studio.adoc
= Starting the Runtime in Cluster Mode in Studio
:keywords: mule, deploy, launch, run, anypoint studio, cluster

Anypoint Studio allows you to specify that the Mule runtime should start in cluster mode for specific applications. Running an application with this setting enabled causes it to run as if it were on a one-node cluster. This allows you to test for any discrepancies in the application's behavior between the clustered and the standalone modes.

You can enable cluster mode using the *run* configurations for your application.

To access the run configurations for your application, select *Run*, then *Run Configurations.* In the left-hand pane, select your desired application or click the image:new.png[new] icon to create a new run configuration.

In the run configuration's *General* tab, click *Start as cluster node*. You can enter a cluster node ID or leave this field blank to let Studio assign a random ID.

image:run_config.png[run_config]

== See Also

* Learn more about link:/runtime-manager/[Runtime Manager].
* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
